# Plata

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  shell.nix
src/: main.cpp  plata.cpp  plata.h  plata.ui
